--- a/root/topics/topic/ie_intro.dita
+++ b/root/topics/topic/ie_intro.dita
@@ -4,7 +4,7 @@
     <title>Введение</title>
     <body>
         <p>По умолчанию Windows 10 предлагает пользоваться браузером Microsoft Edge, однако Internet
-            Explorer также включён в поставку операционной системы. Если сушествует необходимость
+            Explorer также включён в поставку операционной системы. Если существует необходимость
             воспользоваться браузером Internet Explorer, следуйте инструкциям, представленным в
             настоящем руководстве.<note id="note_nk3_3lq_5pb">В настоящее время многие сайты не
                 поддерживают Internet Explorer — рекомендуется использовать Microsoft
